# python-hackathon

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pylintrc  pyproject.toml
.github/workflows/: hugo.yaml
docs/: go.mod  hugo.toml
docs/content/docs/: _index.md  getting-started  getting-started.md  introduction.md
docs/data/: landing.yml
scripts/: sqs_bootstrap.sh
src/: celery_app.py  fast_api_app.py  main.py
src/api/: routers.py
src/api/controllers/: auth.py  health.py  tasks.py  users.py
src/api/middlewares/: authentication.py  exception_handler.py
src/common/errors/: app_exceptions.py  error_codes.py
src/configs/: __init__.py  config.py  config.yml
src/containers/: api_container.py  container.py  service_container.py
src/core/: app_exceptions.py  celery.py
src/database/: db.py
src/database/migrations/: 001-users.sql  002-role-and-permission.sql  003-seed-super-admin.sql
src/database/models/: __init__.py  _common.py  _user.py  permissions.py  role_permissions.py  roles.py  user_roles.py  users.py
src/database/repositories/: errors.py  user.py
src/databases/: db.py
src/databases/models/: __init__.py  _user.py
src/databases/repositories/: base.py  user.py
src/entities/: base.py  permissions.py  role_permissions.py  roles.py  user_roles.py  users.py
src/exceptions/: app_exception.py  app_exceptions.py  error_codes.py
src/libs/db/: engine.py  postgres.py
src/libs/log/: logging.py
src/libs/redis/: client.py
src/libs/s3/: client.py
src/schemas/: auth.py  users.py
src/services/: auth.py  base.py  files.py  notification.py  user.py
src/services/users/: repository.py  service.py
src/utils/: batch_process.py  jwt_token.py  password.py  request.py  response.py  s3.py
src/worker/brokers/: critical.py  internal.py  scheduler.py
src/worker/exceptions/: worker_exception.py
src/worker/tasks/: base.py  email.py  (+3 more)
tests/: conftest.py
tests/helpers/: test_math_operations.py
(+41 files in other folders)
