[tool.poetry]
name = "python-hackathon"
version = "0.1.0"
description = ""
authors = ["spartan-trapham <tra.pham@c0x12c.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
